--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
                 <h3 class="city">Kolkata</h3>
             </div>
             <div class="details">
-                <div class="col">
+                <div class="col col1">
                     <img src="images/humidity.png" />
                     <div class="col-detail">
                         <p class="humidity">50%</p>
                         <p>Humidity</p>
                     </div>
                 </div>
-                <div class="col">
+                <div class="col col2">
                     <img src="images/wind.png" />
                     <div class="col-detail">
                         <p class="wind">15 km/h</p>
